3/5 Yan latest version.

--- a/EnergyCostEstimator/EnergyCostEstimator.csproj
+++ b/EnergyCostEstimator/EnergyCostEstimator.csproj
@@ -36,14 +36,28 @@
       <HintPath>..\packages\CsvHelper.12.1.2\lib\net45\CsvHelper.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="MathNet.Numerics">
+      <HintPath>..\packages\MathNet.Numerics.4.7.0\lib\net461\MathNet.Numerics.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Core" />
+    <Reference Include="System.Numerics" />
+    <Reference Include="System.Runtime.Serialization" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Trace.cs" />
     <Compile Include="TraceDB.cs" />
+    <Compile Include="MaxPaware.cs" />
+    <Compile Include="Scenario.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\SpatialNetwork\SpatialNetwork.csproj">
+      <Project>{A81630E7-1F0E-4F83-B0E8-E5DA0D803A23}</Project>
+      <Name>SpatialNetwork</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
