--- a/EnergyCostEstimator/packages.config
+++ b/EnergyCostEstimator/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CsvHelper" version="12.1.2" targetFramework="net462" />
+  <package id="MathNet.Numerics" version="4.7.0" targetFramework="net462" />
   <package id="System.ValueTuple" version="4.4.0" targetFramework="net462" />
 </packages>
